Fix: FileHandler class