@@ -8,6 +8,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -16,8 +17,8 @@ public class FileHandle {
 	private static Path mainDirectory = Paths.get(System.getProperty("user.dir"));
 	
     public static void createStorageFile(String filename) {
-        String filepath = mainDirectory.toString() + "/" + filename;
-        File file = new File(filepath);
+        Path filepath = mainDirectory.resolve(filename);
+        File file = new File(filepath.toString());
 
         try {
             boolean created = file.createNewFile();
@@ -28,21 +29,23 @@ public class FileHandle {
             	file.createNewFile();
             }
         } catch (IOException e) {
-            System.err.println("When creating the file, an exception ocurred: " + e.getMessage());
+            System.err.println("When creating the file, an exception ocurred: "
+            		+ e.getMessage());
         }
     }
     
 	public static void createStorageFile() {
-		createStorageFile("StorageFile.txt");	
+		createStorageFile("StorageFile.txt");
 	}
     
     public static void deleteStorageFile(String filename) {
-    	String currentDirectoryString = mainDirectory.toString();
-    	File fileObject = new File(currentDirectoryString, filename);
+    	Path filePath = mainDirectory.resolve(filename);
+    	File fileObject = new File(filePath.toString());
     	try {
 			fileObject.delete();
 		} catch (Exception e) {
-			System.out.println("An exception ocurred while deleting the file: " + e.getMessage());
+			System.out.println("An exception ocurred while deleting the file: "
+					+ e.getMessage());
 		}
     }
     
@@ -64,10 +67,11 @@ public class FileHandle {
     }
 
 	public static void writeInformation(String filenameString, String informationString) {
-		Path filepath = Paths.get(mainDirectory.toString() + filenameString);
+		Path filepath = mainDirectory.resolve(filenameString);
 		
 		try {
-			Files.writeString(filepath, informationString+"\n",StandardCharsets.UTF_8);
+			Files.write(filepath, (informationString + "\n").getBytes(StandardCharsets.UTF_8)
+					, StandardOpenOption.APPEND);
 		} catch (IOException e) {
 			System.err.println("An exception ocurred: " + e.getMessage());
 		}
@@ -79,9 +83,9 @@ public class FileHandle {
 
 	public static List<String> readFileLines(String filenameString) {
         List<String> linhas = new ArrayList<>();
-        String filepathString = mainDirectory.toString() + filenameString;
+        Path filePath = mainDirectory.resolve(filenameString);
 
-        try (BufferedReader reader = new BufferedReader(new FileReader(filepathString))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader(filePath.toString()))) {
             String linha;
             while ((linha = reader.readLine()) != null) {
                 linhas.add(linha);
